fix alignment on certain pages

--- a/app/assets/scss/objects/_about.scss
+++ b/app/assets/scss/objects/_about.scss
@@ -6,6 +6,7 @@
 	margin: 2em auto;
 	padding: 2em 1em;
 	max-width: 750px;
+	text-align: left;
 	@extend %clearfix;
 	@include bp(medium) {
 		padding: 2.5em 2em;
