--- a/app/assets/scss/objects/_page.scss
+++ b/app/assets/scss/objects/_page.scss
@@ -10,6 +10,7 @@
 	left: 0;
 	right: 0;
 	margin: 0;
+	text-align: center;
 	@extend %clearfix;
 	@include bp(medium) {
 		margin: 0 0 0 33%;
